huge js additions

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Anthonykahly/10-SVG-Logo-Maker/issues"
   },
-  "homepage": "https://github.com/Anthonykahly/10-SVG-Logo-Maker#readme"
+  "homepage": "https://github.com/Anthonykahly/10-SVG-Logo-Maker#readme",
+  "dependencies": {
+    "inquirer": "^8.2.6"
+  }
 }
